--- a/default.config.yml
+++ b/default.config.yml
@@ -3,6 +3,12 @@ homebrew_taps:
   - homebrew/core
   - homebrew/cask
 
+homebrew_installed_packages:
+  - jq
+  - bitwarden-cli
+  - rdiff-backup
+  - restic
+
 homebrew_cask_apps:
   - android-file-transfer
   - sublime-text
@@ -13,51 +19,50 @@ homebrew_cask_apps:
   - pycharm-ce
 
 dockitems_remove:
- - 'Launchpad'
- - 'Safari'
- - 'Messages'
- - 'Mail'
- - 'Maps'
- - 'Photos'
- - 'FaceTime'
- - 'Contacts'
- - 'Reminders'
- - 'Notes'
- - 'TV'
- - 'Music'
- - 'Podcasts'
- - 'News'
- - 'App Store'
+  - 'Launchpad'
+  - 'Safari'
+  - 'Messages'
+  - 'Mail'
+  - 'Maps'
+  - 'Photos'
+  - 'FaceTime'
+  - 'Contacts'
+  - 'Reminders'
+  - 'Notes'
+  - 'TV'
+  - 'Music'
+  - 'Podcasts'
+  - 'News'
+  - 'App Store'
 
 dockitems_persist:
- - name: 'Android File Transfer'
-   path: '/Applications/Android File Transfer.app'
-   pos: 2
- - name: 'KeePassXC'
-   path: '/Applications/KeePassXC.app'
-   pos: 3
- - name: 'Firefox'
-   path: '/Applications/Firefox.app'
-   pos: 4
- - name: 'Google Chrome'
-   path: '/Applications/Google Chrome.app'
-   pos: 5
- - name: 'PyCharm CE'
-   path: '/Applications/PyCharm CE.app'
-   pos: 6
- - name: 'Visual Studio Code'
-   path: '/Applications/Visual Studio Code.app'
-   pos: 7
- - name: 'Sublime Text'
-   path: '/Applications/Sublime Text.app'
-   pos: 8
- - name: 'Terminal'
-   path: '/System/Applications/Utilities/Terminal.app'
-   pos: 9
- - name: 'Activity Monitor'
-   path: '/System/Applications/Utilities/Activity Monitor.app'
-   pos: 10
- - name: 'System Preferences'
-   path: '/System/Applications/System Preferences.app'
-   pos: 11
-
+  - name: 'Android File Transfer'
+    path: '/Applications/Android File Transfer.app'
+    pos: 2
+  - name: 'KeePassXC'
+    path: '/Applications/KeePassXC.app'
+    pos: 3
+  - name: 'Firefox'
+    path: '/Applications/Firefox.app'
+    pos: 4
+  - name: 'Google Chrome'
+    path: '/Applications/Google Chrome.app'
+    pos: 5
+  - name: 'PyCharm CE'
+    path: '/Applications/PyCharm CE.app'
+    pos: 6
+  - name: 'Visual Studio Code'
+    path: '/Applications/Visual Studio Code.app'
+    pos: 7
+  - name: 'Sublime Text'
+    path: '/Applications/Sublime Text.app'
+    pos: 8
+  - name: 'Terminal'
+    path: '/System/Applications/Utilities/Terminal.app'
+    pos: 9
+  - name: 'Activity Monitor'
+    path: '/System/Applications/Utilities/Activity Monitor.app'
+    pos: 10
+  - name: 'System Preferences'
+    path: '/System/Applications/System Preferences.app'
+    pos: 11
