Use existing dotfiles galaxy role to place down dotfiles - Updated the default.config.yml to point the dotfiles role to a custom dotfiles git repo - Removed the .zshrc placeholder

--- a/default.config.yml
+++ b/default.config.yml
@@ -1,4 +1,11 @@
 ---
+dotfiles_repo: https://github.com/lb3dev/dotfiles.git
+dotfiles_repo_accept_hostkey: true
+dotfiles_repo_local_destination: ~/.macos-setup/dotfiles
+dotfiles_files:
+  - .osx
+  - .zshrc
+
 homebrew_taps:
   - homebrew/core
   - homebrew/cask
