--- a/default.config.yml
+++ b/default.config.yml
@@ -22,6 +22,7 @@ homebrew_cask_apps:
   - keepassxc
   - firefox
   - google-chrome
+  - iterm2
   - visual-studio-code
   - pycharm-ce
 
@@ -67,9 +68,12 @@ dockitems_persist:
   - name: 'Terminal'
     path: '/System/Applications/Utilities/Terminal.app'
     pos: 9
+  - name: 'iTerm'
+    path: '/Applications/iTerm.app'
+    pos: 10
   - name: 'Activity Monitor'
     path: '/System/Applications/Utilities/Activity Monitor.app'
-    pos: 10
+    pos: 11
   - name: 'System Preferences'
     path: '/System/Applications/System Preferences.app'
-    pos: 11
+    pos: 12
