Adding stdout_callback and nocows ansible configs

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,5 @@ interpreter_python = /usr/bin/python3
 inventory = inventory
 become = True
 any_errors_fatal = True
+stdout_callback = yaml
+nocows = True
