Adding new task to use osx_defaults ansible module to write defaults values - With a default item to disable natural scroll

--- a/default.config.yml
+++ b/default.config.yml
@@ -77,3 +77,6 @@ dockitems_persist:
   - name: 'System Preferences'
     path: '/System/Applications/System Preferences.app'
     pos: 12
+
+osx_defaults:
+  - {domain: NSGlobalDomain, key: com.apple.swipescrolldirection, type: bool, value: false}
