--- a/default.config.yml
+++ b/default.config.yml
@@ -24,6 +24,7 @@ homebrew_cask_apps:
   - google-chrome
   - visual-studio-code
   - pycharm-ce
+  - utm
 
 dockitems_remove:
   - 'Launchpad'
@@ -67,15 +68,18 @@ dockitems_persist:
   - name: 'Terminal'
     path: '/System/Applications/Utilities/Terminal.app'
     pos: 9
+  - name: 'UTM'
+    path: '/Applications/UTM.app'
+    pos: 10
   - name: 'Activity Monitor'
     path: '/System/Applications/Utilities/Activity Monitor.app'
-    pos: 10
+    pos: 11
   - name: 'Disk Utility'
     path: '/System/Applications/Utilities/Disk Utility.app'
-    pos: 11
+    pos: 12
   - name: 'System Preferences'
     path: '/System/Applications/System Preferences.app'
-    pos: 12
+    pos: 13
 
 osx_defaults:
   ## General UI
