Add a variable to control if the playbook is running subsequent times or initially - By default initial_setup is false, and only set true when doing 'make init' - Guard osx_script tasks with initial_setup

--- a/tasks/osx_script.yml
+++ b/tasks/osx_script.yml
@@ -3,7 +3,9 @@
   shell: "{{ osx_script | default(ansible_env.HOME + '/.osx')}} 2>&1"
   become: true
   register: osx_script_result
+  when: initial_setup
 
 - name: Print .osx script output
   debug:
     var: osx_script_result.stdout_lines
+  when: initial_setup
