--- a/default.config.yml
+++ b/default.config.yml
@@ -1,4 +1,6 @@
 ---
+initial_setup: false
+
 dotfiles_repo: https://github.com/lb3dev/dotfiles.git
 dotfiles_repo_accept_hostkey: true
 dotfiles_repo_local_destination: ~/.macos-setup/dotfiles
