--- a/tasks/backup.yml
+++ b/tasks/backup.yml
@@ -3,4 +3,4 @@
   git:
     repo: https://github.com/lb3dev/ansible-macos-backup
     dest: "{{ ansible_env.HOME + '/backup' }}"
-    version: 0568ee5b28acb82e9344891201756621e179b5ef
+    version: master
