Moved become password prompt from command line option to vars_prompt in playbook - For some homebrew cask installs sudo password is required, and unfortunately --ask-become-pass option for playbook does not allow tasks to reference the sudo password - Instead use vars_prompt at the beginning of the playbook to prompt the sudo password, and set it for become and homebrew cask installs - Removed --ask-become-pass from playbook calls in Makefile and init script - Updated ansible mac collections git hash reference

--- a/main.yml
+++ b/main.yml
@@ -2,6 +2,14 @@
 - hosts: all
   vars_files:
     - default.config.yml
+  vars_prompt:
+    - name: ansible_become_password
+      prompt: Please enter sudo password (used for become, homebrew)
+      private: yes
+  pre_tasks:
+    - name: Set homebrew sudo password
+      set_fact:
+        homebrew_cask_sudo_password: "{{ ansible_become_password }}"
   roles:
     - role: terminal
     - role: geerlingguy.dotfiles
