Added defaults to overwrite the list of items to index for Spotlight - In osx_defaults tasks, added tasks for initial setup to fake Xcode.app to remove Developer Spotlight results - Also added steps to reindex Spotlight once the new defaults config is added

--- a/default.config.yml
+++ b/default.config.yml
@@ -84,6 +84,30 @@ dockitems_persist:
     path: '/System/Applications/System Preferences.app'
     pos: 13
 
+no_xcode_install: true
+spotlight_index_items:
+  - '{"enabled" = 1;"name" = "APPLICATIONS";}'
+  - '{"enabled" = 0;"name" = "MENU_SPOTLIGHT_SUGGESTIONS";}'
+  - '{"enabled" = 0;"name" = "MENU_CONVERSION";}'
+  - '{"enabled" = 0;"name" = "MENU_EXPRESSION";}'
+  - '{"enabled" = 0;"name" = "MENU_DEFINITION";}'
+  - '{"enabled" = 1;"name" = "SYSTEM_PREFS";}'
+  - '{"enabled" = 0;"name" = "DOCUMENTS";}'
+  - '{"enabled" = 0;"name" = "DIRECTORIES";}'
+  - '{"enabled" = 0;"name" = "PRESENTATIONS";}'
+  - '{"enabled" = 0;"name" = "SPREADSHEETS";}'
+  - '{"enabled" = 0;"name" = "PDF";}'
+  - '{"enabled" = 0;"name" = "MESSAGES";}'
+  - '{"enabled" = 0;"name" = "CONTACT";}'
+  - '{"enabled" = 0;"name" = "EVENT_TODO";}'
+  - '{"enabled" = 0;"name" = "IMAGES";}'
+  - '{"enabled" = 0;"name" = "BOOKMARKS";}'
+  - '{"enabled" = 0;"name" = "MUSIC";}'
+  - '{"enabled" = 0;"name" = "MOVIES";}'
+  - '{"enabled" = 0;"name" = "FONTS";}'
+  - '{"enabled" = 0;"name" = "MENU_OTHER";}'
+  - '{"enabled" = 0;"name" = "SOURCE";}'
+
 osx_defaults:
   ## General UI
 
@@ -158,3 +182,8 @@ osx_defaults:
   - {domain: com.apple.ActivityMonitor, key: UpdatePeriod, type: int, value: 2}
   # Change dock icon to show current CPU usage graph
   - {domain: com.apple.ActivityMonitor, key: IconType, type: int, value: 5}
+
+  ## Spotlight
+
+  # Restrict Spotlight to only index Applications and System Preferences
+  - {domain: com.apple.spotlight, key: orderedItems, type: array, value: "{{ spotlight_index_items }}"}
