--- a/default.config.yml
+++ b/default.config.yml
@@ -3,7 +3,7 @@ initial_setup: false
 
 dotfiles_repo: https://github.com/lb3dev/dotfiles.git
 dotfiles_repo_accept_hostkey: true
-dotfiles_repo_local_destination: ~/.macos-setup/dotfiles
+dotfiles_repo_local_destination: ~/.setup/dotfiles
 dotfiles_files:
   - .osx
   - .zshrc
