Added comment to explain why Xcode.app empty file is added

--- a/tasks/osx_defaults.yml
+++ b/tasks/osx_defaults.yml
@@ -1,4 +1,5 @@
 ---
+# Adding an empty Xcode.app allows the "Developer" category to show up in System Settings for Spotlight search categories
 - name: Touch Xcode.app
   copy:
     content: ""
