Updated ansible dependencies to use geerlingguy's mac ansible collection - Pinned both dotfiles and mac collection versions - Added ask pass option to run main playbook in initial_setup.sh - Removed faulty ansible_become_password guards

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,8 +1,8 @@
 ---
 roles:
   - name: geerlingguy.dotfiles
+    version: "1.2.1"
 
 collections:
-  - source: https://github.com/lb3dev/ansible-collection-mac.git
-    type: git
-    version: fd11b61aec8a847a3d350b538dc1bc9516f5c964
+  - name: geerlingguy.mac
+    version: "4.0.2"
