Adding configure variables to control which tasks to run in main playbook

--- a/default.config.yml
+++ b/default.config.yml
@@ -1,4 +1,14 @@
 ---
+configure_terminal: true
+configure_dotfiles: true
+configure_dock: true
+configure_browser: true
+configure_defaults: true
+configure_backup: true
+
+configure_spotlight: false
+configure_osx: false
+
 initial_setup: false
 
 dotfiles_repo: https://github.com/lb3dev/dotfiles.git
