Updated Spotlight related defaults. Moved configure_spotlight guard inside spotlight.yml - Making an empty Xcode.app is always ran, to show the Developer search category for Spotlight in System Settings

--- a/default.config.yml
+++ b/default.config.yml
@@ -96,26 +96,30 @@ dockitems_persist:
 no_xcode_install: true
 spotlight_index_items:
   - '{"enabled" = 1;"name" = "APPLICATIONS";}'
-  - '{"enabled" = 0;"name" = "MENU_SPOTLIGHT_SUGGESTIONS";}'
-  - '{"enabled" = 0;"name" = "MENU_CONVERSION";}'
   - '{"enabled" = 0;"name" = "MENU_EXPRESSION";}'
-  - '{"enabled" = 0;"name" = "MENU_DEFINITION";}'
-  - '{"enabled" = 1;"name" = "SYSTEM_PREFS";}'
-  - '{"enabled" = 0;"name" = "DOCUMENTS";}'
-  - '{"enabled" = 0;"name" = "DIRECTORIES";}'
-  - '{"enabled" = 0;"name" = "PRESENTATIONS";}'
-  - '{"enabled" = 0;"name" = "SPREADSHEETS";}'
-  - '{"enabled" = 0;"name" = "PDF";}'
-  - '{"enabled" = 0;"name" = "MESSAGES";}'
   - '{"enabled" = 0;"name" = "CONTACT";}'
-  - '{"enabled" = 0;"name" = "EVENT_TODO";}'
-  - '{"enabled" = 0;"name" = "IMAGES";}'
-  - '{"enabled" = 0;"name" = "BOOKMARKS";}'
-  - '{"enabled" = 0;"name" = "MUSIC";}'
-  - '{"enabled" = 0;"name" = "MOVIES";}'
-  - '{"enabled" = 0;"name" = "FONTS";}'
-  - '{"enabled" = 0;"name" = "MENU_OTHER";}'
+  - '{"enabled" = 0;"name" = "MENU_CONVERSION";}'
+  - '{"enabled" = 0;"name" = "MENU_DEFINITION";}'
   - '{"enabled" = 0;"name" = "SOURCE";}'
+  - '{"enabled" = 0;"name" = "DOCUMENTS";}'
+  - '{"enabled" = 0;"name" = "EVENT_TODO";}'
+  - '{"enabled" = 0;"name" = "DIRECTORIES";}'
+  - '{"enabled" = 0;"name" = "FONTS";}'
+  - '{"enabled" = 0;"name" = "IMAGES";}'
+  - '{"enabled" = 0;"name" = "MESSAGES";}'
+  - '{"enabled" = 0;"name" = "MOVIES";}'
+  - '{"enabled" = 0;"name" = "MUSIC";}'
+  - '{"enabled" = 0;"name" = "MENU_OTHER";}'
+  - '{"enabled" = 0;"name" = "PDF";}'
+  - '{"enabled" = 0;"name" = "PRESENTATIONS";}'
+  - '{"enabled" = 0;"name" = "MENU_SPOTLIGHT_SUGGESTIONS";}'
+  - '{"enabled" = 0;"name" = "SPREADSHEETS";}'
+  - '{"enabled" = 1;"name" = "SYSTEM_PREFS";}'
+  - '{"enabled" = 0;"name" = "TIPS";}'
+  - '{"enabled" = 0;"name" = "BOOKMARKS";}'
+
+# Restrict Spotlight to only index Applications and System Preferences
+spotlight_defaults: {domain: com.apple.Spotlight, key: orderedItems, type: array, value: "{{ spotlight_index_items }}"}
 
 osx_defaults:
   ## General UI
@@ -191,8 +195,3 @@ osx_defaults:
   - {domain: com.apple.ActivityMonitor, key: UpdatePeriod, type: int, value: 2}
   # Change dock icon to show current CPU usage graph
   - {domain: com.apple.ActivityMonitor, key: IconType, type: int, value: 5}
-
-  ## Spotlight
-
-  # Restrict Spotlight to only index Applications and System Preferences
-  - {domain: com.apple.spotlight, key: orderedItems, type: array, value: "{{ spotlight_index_items }}"}
