Pin the dotfiles repo

--- a/default.config.yml
+++ b/default.config.yml
@@ -10,6 +10,7 @@ configure_spotlight: false
 initial_setup: false
 
 dotfiles_repo: https://github.com/lb3dev/dotfiles.git
+dotfiles_repo_version: 53ce54b3165f5d3165fa85de49843fb1fe5fc493
 dotfiles_repo_accept_hostkey: true
 dotfiles_repo_local_destination: ~/.setup/dotfiles
 dotfiles_files:
