--- a/default.config.yml
+++ b/default.config.yml
@@ -54,43 +54,35 @@ dockitems_remove:
   - 'App Store'
   - 'Freeform'
 
-dockitems_persist:
+dockitems_persist: []
+dockitems_starting_pos: 1
+dockitems_persist_items:
+  - name: 'Calendar'
+    path: '/System/Applications/Calendar.app'
   - name: 'Android File Transfer'
     path: '/Applications/Android File Transfer.app'
-    pos: 1
   - name: 'KeePassXC'
     path: '/Applications/KeePassXC.app'
-    pos: 2
   - name: 'Firefox'
     path: '/Applications/Firefox.app'
-    pos: 3
   - name: 'Google Chrome'
     path: '/Applications/Google Chrome.app'
-    pos: 4
   - name: 'PyCharm CE'
     path: '/Applications/PyCharm CE.app'
-    pos: 5
   - name: 'Visual Studio Code'
     path: '/Applications/Visual Studio Code.app'
-    pos: 6
   - name: 'Sublime Text'
     path: '/Applications/Sublime Text.app'
-    pos: 7
   - name: 'Terminal'
     path: '/System/Applications/Utilities/Terminal.app'
-    pos: 8
   - name: 'UTM'
     path: '/Applications/UTM.app'
-    pos: 9
   - name: 'Activity Monitor'
     path: '/System/Applications/Utilities/Activity Monitor.app'
-    pos: 10
   - name: 'Disk Utility'
     path: '/System/Applications/Utilities/Disk Utility.app'
-    pos: 11
   - name: 'System Settings'
     path: '/System/Applications/System Settings.app'
-    pos: 12
 
 no_xcode_install: true
 spotlight_index_items:
