Add more macOS defaults to show full urls in Safari and disable mouse accelerations

--- a/default.config.yml
+++ b/default.config.yml
@@ -128,6 +128,8 @@ osx_defaults:
 
   # Disable Natural Scroll for mice
   - {domain: NSGlobalDomain, key: com.apple.swipescrolldirection, type: bool, value: false}
+  # Disable mouse acceleration, linear curve
+  - {domain: NSGlobalDomain, key: com.apple.mouse.linear, type: bool, value: true}
 
   ## Keyboard / Input
 
@@ -182,3 +184,8 @@ osx_defaults:
   - {domain: com.apple.ActivityMonitor, key: UpdatePeriod, type: int, value: 2}
   # Change dock icon to show current CPU usage graph
   - {domain: com.apple.ActivityMonitor, key: IconType, type: int, value: 5}
+
+  ## Safari
+
+  # Always show full url in Safari url bar
+  - {domain: com.apple.Safari, key: ShowFullURLInSmartSearchField, type: bool, value: true}
