--- a/default.config.yml
+++ b/default.config.yml
@@ -164,8 +164,8 @@ osx_defaults:
   - {domain: com.apple.finder, key: ShowStatusBar, type: bool, value: true}
   # Show path bar at the bottom
   - {domain: com.apple.finder, key: ShowPathbar, type: bool, value: true}
-  # Default to column view
-  - {domain: com.apple.finder, key: FXPreferredViewStyle, type: string, value: clmv}
+  # Default to list view
+  - {domain: com.apple.finder, key: FXPreferredViewStyle, type: string, value: Nlsv}
   # Keep folders above files
   - {domain: com.apple.finder, key: _FXSortFoldersFirst, type: bool, value: true}
   # Search the current folder by default rather than full system
