Move backup repo git url and version to default configs

--- a/default.config.yml
+++ b/default.config.yml
@@ -8,6 +8,9 @@ configure_backup: true
 
 configure_spotlight: false
 
+backup_repo: https://github.com/lb3dev/ansible-macos-backup
+backup_repo_version: f671e6bf72bc9ce8d0636b87ed301314e5cf3e93
+
 dotfiles_repo: https://github.com/lb3dev/dotfiles.git
 dotfiles_repo_version: a75a54ea19b40d2ba87eb2aaed3f16f743165aa9
 dotfiles_repo_accept_hostkey: true
