--- a/default.config.yml
+++ b/default.config.yml
@@ -18,6 +18,8 @@ dotfiles_repo_accept_hostkey: true
 dotfiles_repo_local_destination: ~/.setup/dotfiles
 dotfiles_files:
   - .zshrc
+  - .gitignore
+  - .gitconfig
 
 homebrew_taps: []
 
