--- a/default.config.yml
+++ b/default.config.yml
@@ -7,7 +7,7 @@ configure_backup: true
 configure_spotlight: false
 
 setup_repo: https://github.com/lb3dev/ansible-macos-setup
-setup_repo_version: master
+setup_repo_version: 11.x
 
 backup_repo: https://github.com/lb3dev/ansible-macos-backup
 backup_repo_version: 038ac4ee2fc77c7891426bd1e4efac21881d4112
