Added step to install the latest python3 for 11.x - Reverted requirements.txt since latest Python 3.13 supports the listed versions for ansible

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-interpreter_python = /usr/bin/python3
+interpreter_python = /usr/local/bin/python3
 inventory = inventory
 any_errors_fatal = True
 stdout_callback = yaml
