--- a/roles/browser/tasks/main.yml
+++ b/roles/browser/tasks/main.yml
@@ -3,6 +3,5 @@
   command: /Applications/Firefox.app/Contents/MacOS/firefox '{{ item }}'
   with_items: "{{ firefox_initial_pages | default([]) }}"
 
-- name: Open Chrome initial pages
-  command: open -a 'Google Chrome' {{ item }}
-  with_items: "{{ chrome_initial_pages | default([]) }}"
+- name: Open Chrome
+  command: open -a 'Google Chrome'
