Clarify Xcode.app task for Spotlight category

--- a/tasks/spotlight.yml
+++ b/tasks/spotlight.yml
@@ -1,6 +1,6 @@
 ---
 # Adding an empty Xcode.app allows the "Developer" category to show up in System Settings for Spotlight search categories
-- name: Touch Xcode.app
+- name: Touch Xcode.app to allow Developer category for Spotlight search
   copy:
     content: ""
     dest: /Applications/Xcode.app
